Adding bootstrap classes to views

--- a/my-project/templates/product/index.html.twig
+++ b/my-project/templates/product/index.html.twig
@@ -14,8 +14,8 @@
 
     <h1>Product index</h1>
 
-    <table class="table">
-        <thead>
+    <table class="table table-striped">
+        <thead class="thead-dark">
             <tr>
                 <th>Id</th>
                 <th>name</th>
@@ -36,8 +36,8 @@
                 <td>{{ product.LastModifiedDate ? product.LastModifiedDate|date('Y-m-d') : '' }}</td>
                 <td><a href="{{ path('product_category_show', {'id': product.category.id}) }}">{{ product.category.name }}</a></td>
                 <td>
-                    <a href="{{ path('product_show', {'id': product.id}) }}">show</a>
-                    <a href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
+                    <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_show', {'id': product.id}) }}">show</a></button>
+                    <button type="button" class="btn btn-outline-warning"><a href="{{ path('product_edit', {'id': product.id}) }}">edit</a></button>
                 </td>
             </tr>
         {% else %}
@@ -48,5 +48,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('product_new') }}">Create new</a>
+    <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_new') }}">Create new</a></button>
 {% endblock %}
