--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -30,9 +30,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('product_index') }}">back to list</a>
+    <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_index') }}">back to list</a></button>
 
-    <a href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
+    <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_edit', {'id': product.id}) }}">edit</a></button>
 
     {{ include('product/_delete_form.html.twig') }}
 {% endblock %}
