Header edit, VIMS-26

--- a/my-project/templates/base.html.twig
+++ b/my-project/templates/base.html.twig
@@ -8,10 +8,9 @@
     </head>
     <body>
 
-   
-
     <div class="container">
 
+        <header>{% block header %}{% endblock %}</header>
 
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
