--- a/my-project/templates/product/edit.html.twig
+++ b/my-project/templates/product/edit.html.twig
@@ -2,6 +2,12 @@
 
 {% block title %}Edit Product{% endblock %}
 
+{% block header %}
+
+    <p>Products / {{ product.name }} / Edit</p>
+
+{% endblock %}
+
 {% block body %}
     <h1>Edit Product</h1>
 
