--- a/my-project/templates/product/index.html.twig
+++ b/my-project/templates/product/index.html.twig
@@ -2,6 +2,12 @@
 
 {% block title %}Product index{% endblock %}
 
+{% block header %}
+
+    <p>Products</p>
+
+{% endblock %}
+
 {% block body %}
 
     {% for message in app.flashes('notice') %}
