--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -2,6 +2,12 @@
 
 {% block title %}Product{% endblock %}
 
+{% block header %}
+
+    <p>Products / {{ product.name }}</p>
+
+{% endblock %}
+
 {% block body %}
     <h1>Product</h1>
 
