--- a/my-project/templates/product_category/edit.html.twig
+++ b/my-project/templates/product_category/edit.html.twig
@@ -2,6 +2,12 @@
 
 {% block title %}Edit ProductCategory{% endblock %}
 
+{% block header %}
+
+    <p>Categories / {{ product_category.name }} / Edit</p>
+
+{% endblock %}
+
 {% block body %}
     <h1>Edit ProductCategory</h1>
 
