--- a/my-project/templates/product_category/show.html.twig
+++ b/my-project/templates/product_category/show.html.twig
@@ -2,6 +2,12 @@
 
 {% block title %}ProductCategory{% endblock %}
 
+{% block header %}
+
+    <p>Categories / {{ product_category.name }}</p>
+
+{% endblock %}
+
 {% block body %}
     <h1>ProductCategory</h1>
 
