--- a/my-project/templates/product/new.html.twig
+++ b/my-project/templates/product/new.html.twig
@@ -2,6 +2,12 @@
 
 {% block title %}New Product{% endblock %}
 
+{% block header %}
+
+    <p>Products / New product</p>
+
+{% endblock %}
+
 {% block body %}
     <h1>Create new Product</h1>
 
