--- a/my-project/templates/product_category/new.html.twig
+++ b/my-project/templates/product_category/new.html.twig
@@ -2,6 +2,12 @@
 
 {% block title %}New ProductCategory{% endblock %}
 
+{% block header %}
+
+    <p>Categories / New category</p>
+
+{% endblock %}
+
 {% block body %}
     <h1>Create new ProductCategory</h1>
 
