--- a/my-project/templates/product/edit.html.twig
+++ b/my-project/templates/product/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Product{% endblock %}
+{% block title %}{{ product.name }}{% endblock %}
 
 {% block header %}
 
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block body %}
+
     <h1>Edit Product</h1>
 
     {{ include('product/_form.html.twig', {'button_label': 'Update'}) }}
@@ -16,4 +17,5 @@
     <a href="{{ path('product_index') }}">back to list</a>
 
     {{ include('product/_delete_form.html.twig') }}
+
 {% endblock %}
