--- a/my-project/templates/product/new.html.twig
+++ b/my-project/templates/product/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Product{% endblock %}
+{% block title %}New product{% endblock %}
 
 {% block header %}
 
@@ -9,9 +9,11 @@
 {% endblock %}
 
 {% block body %}
+
     <h1>Create new Product</h1>
 
     {{ include('product/_form.html.twig') }}
 
     <a href="{{ path('product_index') }}">back to list</a>
+
 {% endblock %}
