--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Product{% endblock %}
+{% block title %}{{ product.name }}{% endblock %}
 
 {% block header %}
 
@@ -11,34 +11,36 @@
 {% block body %}
     <h1>Product</h1>
 
-    <table class="table">
-        <tbody>
-        <tr>
-            <th>Id</th>
-            <td>{{ product.id }}</td>
-        </tr>
-        <tr>
-            <th>name</th>
-            <td>{{ product.name }}</td>
-        </tr>
-        <tr>
-            <th>description</th>
-            <td>{{ product.description }}</td>
-        </tr>
-        <tr>
-            <th>add_date</th>
-            <td>{{ product.AddDate ? product.AddDate|date('Y-m-d') : '' }}</td>
-        </tr>
-        <tr>
-            <th>last_modified_date</th>
-            <td>{{ product.LastModifiedDate ? product.LastModifiedDate|date('Y-m-d') : '' }}</td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="row">
+        <div class="col">Id</div>
+        <div class="col">{{ product.id }}</div>
+    </div>
+
+    <div class="row">
+        <div class="col">name</div>
+        <div class="col">{{ product.name }}</div>
+    </div>
+
+    <div class="row">
+        <div class="col">description</div>
+        <div class="col">{{ product.description }}</div>
+    </div>
+
+    <div class="row">
+        <div class="col">add_date</div>
+        <div class="col">{{ product.AddDate ? product.AddDate|date('Y-m-d') : '' }}</div>
+    </div>
+
+    <div class="row">
+        <div class="col">last_modified_date</div>
+        <div class="col">{{ product.LastModifiedDate ? product.LastModifiedDate|date('Y-m-d') : '' }}</div>
+    </div>
+
 
     <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_index') }}">back to list</a></button>
 
     <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_edit', {'id': product.id}) }}">edit</a></button>
 
     {{ include('product/_delete_form.html.twig') }}
+
 {% endblock %}
