--- a/my-project/templates/product_category/edit.html.twig
+++ b/my-project/templates/product_category/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit ProductCategory{% endblock %}
+{% block title %}{{ product_category.name }}{% endblock %}
 
 {% block header %}
 
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block body %}
+
     <h1>Edit ProductCategory</h1>
 
     {{ include('product_category/_form.html.twig', {'button_label': 'Update'}) }}
@@ -16,4 +17,5 @@
     <a href="{{ path('product_category_index') }}">back to list</a>
 
     {{ include('product_category/_delete_form.html.twig') }}
+
 {% endblock %}
