--- a/my-project/templates/product_category/new.html.twig
+++ b/my-project/templates/product_category/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New ProductCategory{% endblock %}
+{% block title %}New category{% endblock %}
 
 {% block header %}
 
@@ -9,9 +9,11 @@
 {% endblock %}
 
 {% block body %}
+
     <h1>Create new ProductCategory</h1>
 
     {{ include('product_category/_form.html.twig') }}
 
     <a href="{{ path('product_category_index') }}">back to list</a>
+
 {% endblock %}
