--- a/my-project/templates/nav/nav_items.html.twig
+++ b/my-project/templates/nav/nav_items.html.twig
@@ -1,3 +1,11 @@
+{#
+This file shows all of navigation items
+@category View
+@Package Virtua_Internship
+@copyright Copyright (c) 2018 Virtua (http://www.wearevirtua.com)
+@author Maciej Skalny contact@wearevirtua.com
+#}
+
 
         {% for product_category in categories %}
             <li class="nav-item">
