--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -1,3 +1,11 @@
+{#
+This file shows one of products
+@category View
+@Package Virtua_Internship
+@copyright Copyright (c) 2018 Virtua (http://www.wearevirtua.com)
+@author Maciej Skalny contact@wearevirtua.com
+#}
+
 {% extends 'base.html.twig' %}
 
 {% block title %}{{ product.name }}{% endblock %}
