--- a/my-project/templates/product_category/_delete_form.html.twig
+++ b/my-project/templates/product_category/_delete_form.html.twig
@@ -1,3 +1,11 @@
+{#
+This file renders form which is responsible for deleting another category
+@category View
+@Package Virtua_Internship
+@copyright Copyright (c) 2018 Virtua (http://www.wearevirtua.com)
+@author Maciej Skalny contact@wearevirtua.com
+#}
+
 <form method="post" action="{{ path('product_category_delete', {'id': product_category.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product_category.id) }}">
