--- a/my-project/templates/product_category/new.html.twig
+++ b/my-project/templates/product_category/new.html.twig
@@ -1,3 +1,11 @@
+{#
+This file shows form which is responsible for creating new category
+@category View
+@Package Virtua_Internship
+@copyright Copyright (c) 2018 Virtua (http://www.wearevirtua.com)
+@author Maciej Skalny contact@wearevirtua.com
+#}
+
 {% extends 'base.html.twig' %}
 
 {% block title %}New category{% endblock %}
