VIMS-26, zmiana styli

--- a/my-project/templates/product/edit.html.twig
+++ b/my-project/templates/product/edit.html.twig
@@ -12,18 +12,27 @@ This file shows form which is responsible for updating another product
 
 {% block header %}
 
-    <p>Products / {{ product.name }} / Edit</p>
+    <p class="title-of-page">Products / {{ product.name }} / Edit</p>
 
 {% endblock %}
 
 {% block body %}
 
-    <h1>Edit Product</h1>
+    <div class="jumbotron">
+
+    <h1>Edit product</h1>
 
     {{ include('product/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('product_index') }}">back to list</a>
+        <br>
+
+        <a href="{{ path('product_index') }}"><button class="btn btn-primary">Back to list</button></a>
+
+        <br>
+        <br>
 
     {{ include('product/_delete_form.html.twig') }}
+
+    </div>
 
 {% endblock %}
