--- a/my-project/templates/product/index.html.twig
+++ b/my-project/templates/product/index.html.twig
@@ -12,7 +12,7 @@ This file shows all of the products
 
 {% block header %}
 
-    <p>Products</p>
+    <p class="title-of-page">Products</p>
 
 {% endblock %}
 
@@ -26,20 +26,21 @@ This file shows all of the products
 
     {% endfor %}
 
-    <h1>Product index</h1>
+    <div class="jumbotron">
+    <h1 class="entity-name">Products</h1>
 
     <div class="row">
-        <div class="col">Id</div>
-        <div class="col">Name</div>
-        <div class="col">Description</div>
-        <div class="col">Created at</div>
-        <div class="col">Last modified date</div>
-        <div class="col">Category</div>
-        <div class="col">Actions</div>
+        <div class="col entity-field">Id</div>
+        <div class="col entity-field">Name</div>
+        <div class="col entity-field">Description</div>
+        <div class="col entity-field">Created at</div>
+        <div class="col entity-field">Last modified date</div>
+        <div class="col entity-field">Category</div>
+        <div class="col entity-field">Actions</div>
     </div>
 
     {% for product in products %}
-        <div class="row">
+        <div class="row entity-list-item">
             <div class="col">{{ product.id }}</div>
             <div class="col">{{ product.name }}</div>
             <div class="col">{{ product.description }}</div>
@@ -47,15 +48,18 @@ This file shows all of the products
             <div class="col">{{ product.LastModifiedDate ? product.LastModifiedDate|date('Y-m-d') : '' }}</div>
             <div class="col"><a href="{{ path('product_category_show', {'id': product.category.id}) }}">{{ product.category.name }}</a></div>
             <div class="col">
-                <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_show', {'id': product.id}) }}">show</a></button>
-                <button type="button" class="btn btn-outline-warning"><a href="{{ path('product_edit', {'id': product.id}) }}">edit</a></button>
+                <a href="{{ path('product_show', {'id': product.id}) }}"><button type="button" class="btn btn-outline-primary">Show</button></a>
+                <a href="{{ path('product_edit', {'id': product.id}) }}"><button type="button" class="btn btn-outline-primary">Edit</button></a>
             </div>
         </div>
     {% else %}
             <p>no records found</p>
     {% endfor %}
 
+        <br>
 
-    <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_new') }}">Create new</a></button>
+        <a href="{{ path('product_new') }}"><button type="button" class="btn btn-primary">Create new</button></a>
+
+    </div>
 
 {% endblock %}
