--- a/my-project/templates/product_category/index.html.twig
+++ b/my-project/templates/product_category/index.html.twig
@@ -12,34 +12,36 @@ This file shows all of the categories
 
 {% block header %}
 
-    <p>Categories</p>
+    <p class="title-of-page">Categories</p>
 
 {% endblock %}
 
 {% block body %}
 
-    <h1>ProductCategory index</h1>
+    <div class="jumbotron">
+
+    <h1 class="entity-name">Categories</h1>
 
     <div class="row">
-        <div class="col">Id</div>
-        <div class="col">name</div>
-        <div class="col">description</div>
-        <div class="col">add_date</div>
-        <div class="col">last_modified_date</div>
-        <div class="col">actions</div>
+        <div class="col entity-field">Id</div>
+        <div class="col entity-field">name</div>
+        <div class="col entity-field">description</div>
+        <div class="col entity-field">add_date</div>
+        <div class="col entity-field">last_modified_date</div>
+        <div class="col entity-field">actions</div>
     </div>
 
     {% for product_category in product_categories %}
 
-        <div class="row">
+        <div class="row entity-list-item">
             <div class="col">{{ product_category.id }}</div>
             <div class="col">{{ product_category.name }}</div>
             <div class="col">{{ product_category.description }}</div>
             <div class="col">{{ product_category.AddDate ? product_category.AddDate|date('Y-m-d') : '' }}</div>
             <div class="col">{{ product_category.LastModifiedDate ? product_category.LastModifiedDate|date('Y-m-d') : '' }}</div>
             <div class="col">
-                <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_category_show', {'id': product_category.id}) }}">show</a></button>
-                <button type="button" class="btn btn-outline-warning"><a href="{{ path('product_category_edit', {'id': product_category.id}) }}">edit</a></button>
+                <a href="{{ path('product_category_show', {'id': product_category.id}) }}"><button type="button" class="btn btn-outline-primary">Show</button></a>
+                <a href="{{ path('product_category_edit', {'id': product_category.id}) }}"><button type="button" class="btn btn-outline-primary">Edit</button></a>
             </div>
         </div>
 
@@ -49,6 +51,10 @@ This file shows all of the categories
 
     {% endfor %}
 
-            <a href="{{ path('product_category_new') }}">Create new</a>
+        <br>
+
+        <a href="{{ path('product_category_new') }}"><button class="btn btn-primary">Create new</button></a>
+
+    </div>
 
 {% endblock %}
