--- a/my-project/templates/product_category/show.html.twig
+++ b/my-project/templates/product_category/show.html.twig
@@ -12,54 +12,66 @@ This file shows one of the category
 
 {% block header %}
 
-    <p>Categories / {{ product_category.name }}</p>
+    <p class="title-of-page">Categories / {{ product_category.name }}</p>
 
 {% endblock %}
 
 {% block body %}
+    <div class="jumbotron">
+    <h1 class="entity-name">Product category</h1>
 
-    <h1>ProductCategory</h1>
-
-    <div class="row">
-        <div class="col">Id</div>
+    <div class="row entity-list-item">
+        <div class="col entity-field">Id</div>
         <div class="col">{{ product_category.id }}</div>
     </div>
 
-    <div class="row">
-        <div class="col">name</div>
+    <div class="row entity-list-item">
+        <div class="col entity-field">name</div>
         <div class="col">{{ product_category.name }}</div>
     </div>
 
-    <div class="row">
-        <div class="col">description</div>
+    <div class="row entity-list-item">
+        <div class="col entity-field">description</div>
         <div class="col">{{ product_category.description }}</div>
     </div>
 
-    <div class="row">
-        <div class="col">add_date</div>
+    <div class="row entity-list-item">
+        <div class="col entity-field">add_date</div>
         <div class="col">{{ product_category.AddDate ? product_category.AddDate|date('Y-m-d') : '' }}</div>
     </div>
 
-    <div class="row">
-        <div class="col">last_modified_date</div>
+    <div class="row entity-list-item">
+        <div class="col entity-field">last_modified_date</div>
         <div class="col">{{ product_category.LastModifiedDate ? product_category.LastModifiedDate|date('Y-m-d') : '' }}</div>
     </div>
 
-    <p>Products:</p>
+    <p class="entity-field">Products:</p>
+    <span class="entity-list">
     {% for product in product_category.products %}
 
-        <li><a href="{{ path('product_show', {'id': product.id}) }}">{{ product.name }}</a></li>
+        <li class="entity-list-item"><a href="{{ path('product_show', {'id': product.id}) }}">{{ product.name }}</a></li>
 
     {% else %}
 
-            <li>no products found</li></br>
+            <li>no products found</li><br>
 
     {% endfor %}
+    </span>
 
-    <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_category_index') }}">back to list</a></button>
+        <br>
 
-    <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_category_edit', {'id': product_category.id}) }}">edit</a></button>
+        <a href="{{ path('product_category_index') }}"><button type="button" class="btn btn-primary">Back to list</button></a>
+
+        <br>
+        <br>
+
+        <a href="{{ path('product_category_edit', {'id': product_category.id}) }}"><button type="button" class="btn btn-primary">Edit</button></a>
+
+        <br>
+        <br>
 
     {{ include('product_category/_delete_form.html.twig') }}
+
+    </div>
 
 {% endblock %}
