--- a/my-project/templates/nav/nav_items.html.twig
+++ b/my-project/templates/nav/nav_items.html.twig
@@ -8,9 +8,9 @@ This file shows all of navigation items
 
 
         {% for product_category in categories %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('product_category_show', {'id': product_category.id}) }}">{{ product_category.name }}</a>
-            </li>
+
+                <a class="dropdown-item" href="{{ path('product_category_show', {'id': product_category.id}) }}">{{ product_category.name }}</a>
+                <div class="dropdown-divider"></div>
 
             {% else %}
 
