--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -12,43 +12,56 @@ This file shows one of products
 
 {% block header %}
 
-    <p>Products / {{ product.name }}</p>
+    <p class="title-of-page">Products / {{ product.name }}</p>
 
 {% endblock %}
 
 {% block body %}
-    <h1>Product</h1>
 
-    <div class="row">
+    <div class="jumbotron">
+    <h1 class="entity-name">Product</h1>
+
+    <div class="row entity-list-item">
         <div class="col">Id</div>
         <div class="col">{{ product.id }}</div>
     </div>
 
-    <div class="row">
+    <div class="row entity-list-item">
         <div class="col">name</div>
         <div class="col">{{ product.name }}</div>
     </div>
 
-    <div class="row">
+    <div class="row entity-list-item">
         <div class="col">description</div>
         <div class="col">{{ product.description }}</div>
     </div>
 
-    <div class="row">
+    <div class="row entity-list-item">
         <div class="col">add_date</div>
         <div class="col">{{ product.AddDate ? product.AddDate|date('Y-m-d') : '' }}</div>
     </div>
 
-    <div class="row">
+    <div class="row entity-list-item">
         <div class="col">last_modified_date</div>
         <div class="col">{{ product.LastModifiedDate ? product.LastModifiedDate|date('Y-m-d') : '' }}</div>
     </div>
 
 
-    <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_index') }}">back to list</a></button>
+        <br>
+        <br>
 
-    <button type="button" class="btn btn-outline-primary"><a href="{{ path('product_edit', {'id': product.id}) }}">edit</a></button>
+        <a href="{{ path('product_index') }}"><button type="button" class="btn btn-primary">Back to list</button></a>
+
+        <br>
+        <br>
+
+        <a href="{{ path('product_edit', {'id': product.id}) }}"><button type="button" class="btn btn-primary">Edit</button></a>
+
+        <br>
+        <br>
 
     {{ include('product/_delete_form.html.twig') }}
+
+    </div>
 
 {% endblock %}
