--- a/my-project/templates/product_category/_form.html.twig
+++ b/my-project/templates/product_category/_form.html.twig
@@ -8,5 +8,5 @@ This file renders form which is responsible for updating another category
 
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-primary">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
