--- a/my-project/templates/product_category/_form.html.twig
+++ b/my-project/templates/product_category/_form.html.twig
@@ -8,5 +8,25 @@ This file renders form which is responsible for updating another category
 
 {{ form_start(form) }}
     {{ form_widget(form) }}
+<ul id="image-fields-list"
+    data-prototype="{{ form_widget(form.images.vars.prototype)|e }}"
+
+    data-widget-tags="{{ '<li></li>'|e }}">
+    {% for imageField in form.images %}
+        <li>
+            {{ form_errors(imageField) }}
+            {{ form_widget(imageField) }}
+        </li>
+    {% endfor %}
+</ul>
+
+<button type="button"
+        class="add-another-collection-widget"
+        data-list="#image-fields-list">Add another email</button>
+
     <button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+
+{{ form_row(form.images) }}
 {{ form_end(form) }}
+
+<script src="{{ asset('/js/add-collection-widget.js') }}"></script>
