--- a/my-project/templates/product_category/_form.html.twig
+++ b/my-project/templates/product_category/_form.html.twig
@@ -7,12 +7,13 @@ This file renders form which is responsible for updating another category
 #}
 
 {{ form_start(form) }}
-    {{ form_widget(form) }}
+    {{ form_widget(form.name) }} <br><br>
+    {{ form_widget(form.description) }} <br><br>
 <ul id="image-fields-list"
-    data-prototype="{{ form_widget(form.images.vars.prototype)|e }}"
+    data-prototype="{{ form_widget(form.image_files.vars.prototype)|e }}"
 
     data-widget-tags="{{ '<li></li>'|e }}">
-    {% for imageField in form.images %}
+    {% for imageField in form.image_files %}
         <li>
             {{ form_errors(imageField) }}
             {{ form_widget(imageField) }}
@@ -20,13 +21,13 @@ This file renders form which is responsible for updating another category
     {% endfor %}
 </ul>
 
-<button type="button"
+    <button type="button"
         class="add-another-collection-widget"
-        data-list="#image-fields-list">Add another email</button>
+        data-list="#image-fields-list">Add another email</button><br><br>
 
     <button class="btn btn-primary">{{ button_label|default('Save') }}</button>
 
-{{ form_row(form.images) }}
-{{ form_end(form) }}
+    {{ form_row(form.image_files) }}
+    {{ form_end(form) }}
 
 <script src="{{ asset('/js/add-collection-widget.js') }}"></script>
