--- a/my-project/templates/product_category/_form.html.twig
+++ b/my-project/templates/product_category/_form.html.twig
@@ -24,7 +24,7 @@ This file renders form which is responsible for updating another category
 
     <button type="button"
         class="add-another-collection-widget"
-        data-list="#image-fields-list">Add another email</button><br><br>
+        data-list="#image-fields-list">Add another image to gallery</button><br><br>
 
     <button class="btn btn-primary">{{ button_label|default('Save') }}</button>
 
