--- a/my-project/templates/product/edit.html.twig
+++ b/my-project/templates/product/edit.html.twig
@@ -20,11 +20,22 @@ This file shows form which is responsible for updating another product
 
     <div class="jumbotron">
 
-    <h1>Edit product</h1>
+    <h1 class="entity-name">Edit</h1>
 
     {{ include('product/_form.html.twig', {'button_label': 'Update'}) }}
 
-        <br>
+        <p class="entity-field">Images:</p>
+        <span class="entity-list">
+    {% for image in product.image %}
+
+        <li class="entity-list-item">{{ image.name }}{{ include('product_image/_delete_form.html.twig') }}</li>
+
+    {% else %}
+
+        <li>no images found</li><br>
+
+    {% endfor %}
+    </span>
 
         <a href="{{ path('product_index') }}"><button class="btn btn-primary">Back to list</button></a>
 
