--- a/my-project/templates/product_category/edit.html.twig
+++ b/my-project/templates/product_category/edit.html.twig
@@ -24,13 +24,6 @@ This file shows form which is responsible for updating another category
 
     {{ include('product_category/_form.html.twig', {'button_label': 'Update'}) }}
 
-        <br>
-
-        <a href="{{ path('product_category_index') }}"><button type="button" class="btn btn-primary">Back to list</button></a>
-
-        <br>
-        <br>
-
         <p class="entity-field">Images:</p>
         <span class="entity-list">
     {% for image in product_category.image %}
@@ -42,7 +35,12 @@ This file shows form which is responsible for updating another category
         <li>no images found</li><br>
 
     {% endfor %}
-    </span><br>
+    </span>
+
+        <a href="{{ path('product_category_index') }}"><button type="button" class="btn btn-primary">Back to list</button></a>
+
+        <br>
+        <br>
 
     {{ include('product_category/_delete_form.html.twig') }}
 
