--- a/my-project/templates/product/edit.html.twig
+++ b/my-project/templates/product/edit.html.twig
@@ -18,6 +18,14 @@ This file shows form which is responsible for updating another product
 
 {% block body %}
 
+    {% for message in app.flashes('notice') %}
+
+        <div class="flash-notice">
+            {{ message }}
+        </div>
+
+    {% endfor %}
+
     <div class="jumbotron">
 
     <h1 class="entity-name">Edit</h1>
