--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -46,6 +46,25 @@ This file shows one of products
         <div class="col">{{ product.LastModifiedDate ? product.LastModifiedDate|date('Y-m-d') : '' }}</div>
     </div>
 
+        <p class="entity-field">Images:</p>
+        <span class="entity-list">
+            <div class="row">
+
+    {% for image in product.image %}
+
+        <div class="gallery_product col-lg-2 col-md-2 col-sm-2 col-xs-6 filter hdpe">
+                <img width="100px" height="100px" src="{{ asset('uploads/images/') }}{{ image.name }}" class="img-responsive">
+            </div>
+
+    {% else %}
+
+        <li>no images found</li><br>
+
+    {% endfor %}
+
+        </div>
+    </span>
+
 
         <br>
         <br>
