--- a/my-project/templates/base.html.twig
+++ b/my-project/templates/base.html.twig
@@ -29,8 +29,16 @@
                             Categories
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/category">Categories</a>
+                            <div class="dropdown-divider"></div>
                             {{ render(controller('App\\Controller\\NavController::items')) }}
                         </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/product">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Cart</a>
                     </li>
                 </ul>
             </div>
