--- a/my-project/templates/product/new.html.twig
+++ b/my-project/templates/product/new.html.twig
@@ -28,7 +28,7 @@ This file shows form which is responsible for creating new products
 
     <br>
 
-        <a href="{{ path('product_index') }}"><button class="btn btn-primary">Back to list</button></a>
+        <a href="{{ path('product_index') }}"><button class="btn btn-dark">Back to list</button></a>
 
     </div>
 
