--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -69,12 +69,16 @@ This file shows one of products
         <br>
         <br>
 
-        <a href="{{ path('product_index') }}"><button type="button" class="btn btn-primary">Back to list</button></a>
+        {{ include('cart/_additem_form.html.twig') }}
+
+        <br>
+
+        <a href="{{ path('product_index') }}"><button type="button" class="btn btn-dark">Back to list</button></a>
 
         <br>
         <br>
 
-        <a href="{{ path('product_edit', {'id': product.id}) }}"><button type="button" class="btn btn-primary">Edit</button></a>
+        <a href="{{ path('product_edit', {'id': product.id}) }}"><button type="button" class="btn btn-dark">Edit</button></a>
 
         <br>
         <br>
