--- a/my-project/templates/product_category/_form.html.twig
+++ b/my-project/templates/product_category/_form.html.twig
@@ -26,7 +26,7 @@ This file renders form which is responsible for updating another category
         class="add-another-collection-widget"
         data-list="#image-fields-list">Add another image to gallery</button><br><br>
 
-    <button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-dark">{{ button_label|default('Save') }}</button>
 
     {{ form_row(form.image_files) }}
     {{ form_end(form) }}
