--- a/my-project/templates/product_category/edit.html.twig
+++ b/my-project/templates/product_category/edit.html.twig
@@ -45,7 +45,7 @@ This file shows form which is responsible for updating another category
     {% endfor %}
     </span>
 
-        <a href="{{ path('product_category_index') }}"><button type="button" class="btn btn-primary">Back to list</button></a>
+        <a href="{{ path('product_category_index') }}"><button type="button" class="btn btn-dark">Back to list</button></a>
 
         <br>
         <br>
