--- a/my-project/templates/product_category/new.html.twig
+++ b/my-project/templates/product_category/new.html.twig
@@ -26,7 +26,7 @@ This file shows form which is responsible for creating new category
 
     <br>
 
-        <a href="{{ path('product_category_index') }}"><button class="btn btn-primary">Back to list</button></a>
+        <a href="{{ path('product_category_index') }}"><button class="btn btn-dark">Back to list</button></a>
 
     </div>
 
