--- a/my-project/templates/product_category/show.html.twig
+++ b/my-project/templates/product_category/show.html.twig
@@ -79,12 +79,12 @@ This file shows one of the category
 
         <br>
 
-        <a href="{{ path('product_category_index') }}"><button type="button" class="btn btn-primary">Back to list</button></a>
+        <a href="{{ path('product_category_index') }}"><button type="button" class="btn btn-dark">Back to list</button></a>
 
         <br>
         <br>
 
-        <a href="{{ path('product_category_edit', {'id': product_category.id}) }}"><button type="button" class="btn btn-primary">Edit</button></a>
+        <a href="{{ path('product_category_edit', {'id': product_category.id}) }}"><button type="button" class="btn btn-dark">Edit</button></a>
 
         <br>
         <br>
