--- a/my-project/templates/product/show.html.twig
+++ b/my-project/templates/product/show.html.twig
@@ -69,7 +69,7 @@ This file shows one of products
         <br>
         <br>
 
-        {{ include('cart/_additem_form.html.twig') }}
+        {{ include('wishlist/_additem_form.html.twig') }}
 
         <br>
 
