--- a/my-project/templates/wishlist/_additem_form.html.twig
+++ b/my-project/templates/wishlist/_additem_form.html.twig
@@ -6,8 +6,8 @@ This file renders form which is responsible for deleting another product
 @author Maciej Skalny contact@wearevirtua.com
 #}
 
-<form method="post" action="{{ path('product_delete', {'id': product.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('product_delete', {'id': product.id}) }}" onsubmit="return 'Product added successfully'">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
-    <button class="btn btn-warning">Add to cart</button>
+    <button class="btn btn-warning">Add to wishlist</button>
 </form>
