--- a/my-project/templates/base.html.twig
+++ b/my-project/templates/base.html.twig
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="/product">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cart</a>
+                        <a class="nav-link" href="/wishlist">Wishlist</a>
                     </li>
                 </ul>
             </div>
