--- a/my-project/templates/wishlist/index.html.twig
+++ b/my-project/templates/wishlist/index.html.twig
@@ -16,5 +16,11 @@
         <li>Your controller at <code><a href="{{ 'src/Controller/WishlistController.php'|file_link(0) }}">src/Controller/WishlistController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'templates/wishlist/index.html.twig'|file_link(0) }}">templates/wishlist/index.html.twig</a></code></li>
     </ul>
+
+    {% for product in products %}
+
+        <p>{{ product }}</p>
+
+    {% endfor %}
 </div>
 {% endblock %}
