--- a/my-project/templates/wishlist/index.html.twig
+++ b/my-project/templates/wishlist/index.html.twig
@@ -1,30 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Wishlist{% endblock %}
+{% block title %}Wishlist ({{ products|length }}){% endblock %}
 
 {% block header %}
 
-    <p class="title-of-page">Wishlist</p>
+    <p class="title-of-page">Wishlist ({{ products|length }})</p>
 
 {% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
     <div class="jumbotron">
         <h1 class="entity-name">Your wishlist.</h1>
 
         <div class="row">
-            <div class="col entity-field"></div>
-            <div class="col entity-field">Name</div>
-            {#<div class="col entity-field">Description</div>#}
-            {#<div class="col entity-field">Created at</div>#}
-            {#<div class="col entity-field">Last modified date</div>#}
-            {#<div class="col entity-field">Category</div>#}
-            <div class="col entity-field">Actions</div>
+
+            <div class="col-2 entity-field"></div>
+            <div class="col-2 entity-field">Name</div>
+
         </div>
 
         {% for product in products %}
@@ -32,14 +25,11 @@
 
         <div class="row entity-list-item">
 
-            <div class="col">
-                <div class="main-image"></div>
+            <div class="col-2">
+                <div class="main-image" {% if product.mainImage is not null %} style="background: url('{{ asset('uploads/images/') }}{{ product.mainImage }}')" {% endif %}></div>
             </div>
 
-            <div class="col">{{ product.name }}</div>
-
-            <div class="col"></div>
-
+            <div class="col-2"><a href="{{ path('product_show', {'id': product.id}) }}">{{ product.name }}</a></div>
 
         </div>
             {% else %}
