--- a/my-project/templates/wishlist/index.html.twig
+++ b/my-project/templates/wishlist/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Wishlist ({{ products|length }}){% endblock %}
+{% block title %}Wishlist {% if products is defined %}({{ products|length }}){% endif %}{% endblock %}
 
 {% block header %}
 
-    <p class="title-of-page">Wishlist ({{ products|length }})</p>
+    <p class="title-of-page">Wishlist {% if products is defined %}({{ products|length }}){% endif %}</p>
 
 {% endblock %}
 
@@ -13,13 +13,8 @@
     <div class="jumbotron">
         <h1 class="entity-name">Your wishlist.</h1>
 
-        <div class="row">
 
-            <div class="col-2 entity-field"></div>
-            <div class="col-2 entity-field">Name</div>
-
-        </div>
-
+        {% if products is defined %}
         {% for product in products %}
 
 
@@ -31,12 +26,24 @@
 
             <div class="col-2"><a href="{{ path('product_show', {'id': product.id}) }}">{{ product.name }}</a></div>
 
-        </div>
-            {% else %}
+            <div class="col-2">{{ include('wishlist/_deleteitem_form.html.twig') }}</div>
 
-            <p>Your wishlist is empty, please return to categories to continue shopping.</p>
+        </div>
+
 
         {% endfor %}
+
+
+        <div class="row">
+            {{ include('wishlist/_deleteall_form.html.twig') }}
+        </div>
+
+        {% else %}
+            <p>Your wishlist is empty, please return to categories to continue shopping</p>
+            
+        {% endif %}
+
+
 
     </div>
 {% endblock %}
