--- a/my-project/templates/wishlist/index.html.twig
+++ b/my-project/templates/wishlist/index.html.twig
@@ -10,6 +10,11 @@
 
 {% block body %}
 
+    {% for flashMessage in app.session.flashbag.get('error') %}
+
+        {{ flashMessage }}
+
+    {% endfor %}
     <div class="jumbotron">
         <h1 class="entity-name">Your wishlist.</h1>
 
@@ -40,10 +45,8 @@
 
         {% else %}
             <p>Your wishlist is empty, please return to categories to continue shopping</p>
-            
+
         {% endif %}
-
-
 
     </div>
 {% endblock %}
