--- a/my-project/templates/base.html.twig
+++ b/my-project/templates/base.html.twig
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/wishlist">Wishlist</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">Register</a>
+                    </li>
                 </ul>
             </div>
         </nav>
