--- a/my-project/templates/base.html.twig
+++ b/my-project/templates/base.html.twig
@@ -41,6 +41,9 @@
                         <a class="nav-link" href="/wishlist">Wishlist</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/register">Register</a>
                     </li>
                 </ul>
