--- a/my-project/templates/product_category/_form.html.twig
+++ b/my-project/templates/product_category/_form.html.twig
@@ -10,7 +10,7 @@ This file renders form which is responsible for updating another category
 
     {{ form_widget(form.name) }} <br><br>
     {{ form_widget(form.description) }} <br><br>
-    {{ form_widget(form.mainImage) }} <br><br>
+    {{ form_widget(form.ImageFile) }} <br><br>
 
     <ul id="image-fields-list" data-prototype="{{ form_widget(form.image_files.vars.prototype)|e }}" data-widget-tags="{{ '<li></li>'|e }}">
 
