--- a/my-project/templates/product_category/show.html.twig
+++ b/my-project/templates/product_category/show.html.twig
@@ -60,8 +60,7 @@ This file shows one of the category
 
         <p class="entity-field">Images:</p>
         <span class="entity-list">
-
-    {% for image in product_category.images %}
+    {% for image in product_category.image %}
 
         <li class="entity-list-item">{{ image.name }}</li>
 
